# START_LNS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  START_LNS手册.docx  src.tar.bz2
src/: PyPlot.ipynb  backmodule_bf_points.f90  cfgio_adapter.f90  compute_metrics.f90  global_parameters.f90  loaders.f90  main.f90  matrix_used_as_cofficient.f90  mod_cubes.f90  mod_difference.f90  mod_files.f90  mod_flowtype.f90  mod_forming.f90  mod_iterate.f90  mod_loading.f90  mod_metrics.f90  mod_mf_tools.f90  mod_mftools.f90  mod_output.f90  mod_parameters.f90  mod_points.f90  mod_reading.f90  mod_solving.f90  module_baseflow_org.f90  module_bf_point_org.f90  module_bf_points.f90  module_gas.f90  petsc_loader.f90  petsc_output.f90  petsc_viewer.f90
